slascard minor change

--- a/medmonics/src/styles/FlashcardsPage.css
+++ b/medmonics/src/styles/FlashcardsPage.css
@@ -188,7 +188,7 @@
 }
 
 .category-list li.active {
-  background-color: #007bff;
+  background-color: #1d4ed8;
   color: white;
   border-color: #007bff;
 }
